--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,25 @@
 bcrypt==4.2.0
 beautifulsoup4==4.12.3
 blinker==1.8.2
+certifi==2024.8.30
+charset-normalizer==3.4.0
 click==8.1.7
 colorama==0.4.6
 Flask==3.0.3
+Flask-SQLAlchemy==3.1.1
+greenlet==3.1.1
+idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.4
 MarkupSafe==3.0.2
+psycopg2==2.9.10
 psycopg2-binary==2.9.10
 python-dotenv==1.0.1
+requests==2.32.3
 six==1.16.0
 soupsieve==2.6
+SQLAlchemy==2.0.36
+stripe==11.3.0
+typing_extensions==4.12.2
+urllib3==2.2.3
 Werkzeug==3.0.4
-requests
-Flask-SQLAlchemy
-stripe
