--- a/requirements.txt
+++ b/requirements.txt
@@ -6,12 +6,14 @@ charset-normalizer==3.4.0
 click==8.1.7
 colorama==0.4.6
 Flask==3.0.3
+Flask-Login==0.6.3
 Flask-SQLAlchemy==3.1.1
 greenlet==3.1.1
 idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.4
 MarkupSafe==3.0.2
+psycopg2==2.9.10
 psycopg2-binary==2.9.10
 python-dotenv==1.0.1
 requests==2.32.3
